--- a/style.css
+++ b/style.css
@@ -85,6 +85,9 @@ body
     transition-delay: 0.1s;
     transition: fill-opacity 0.13s ease-out;
 }
+.colorBase{
+    fill: #fff;
+}
 .show{
     fill-opacity: 1.0;
     transition: fill-opacity 0.13s ease-out;
