--- a/style.css
+++ b/style.css
@@ -85,8 +85,8 @@ body
     transition-delay: 0.1s;
     transition: fill-opacity 0.13s ease-out;
 }
-.colorBase{
-    fill: #fff;
+.colorReveal{
+    fill: #000;
 }
 .show{
     fill-opacity: 1.0;
