--- a/style.css
+++ b/style.css
@@ -1,51 +1,237 @@
-@import url('https://fonts.googleapis.com/css2?family=Aleo&display=swap');
-*{
-  font-family: 'Aleo', sans-serif;
-  font-weight:400;
-    margin: 0;
-    padding: 0;
-}
-
-html,
-body
-{
-    color: #9D988A;
+/* @import url('https://fonts.googleapis.com/css2?family=Aleo&display=swap'); */
+@import url("https://use.typekit.net/tok0jjl.css");
+body{
+    /* font-family: 'Aleo', sans-serif; */
+    /* font-display:block; */
+    font-family: field-gothic-wide, sans-serif;
+    font-style: normal;
+    font-weight:400;
+    color: #000;
     font-size: 0.9em;
-    overflow: hidden;
-}
-
-#lines
-{
-    position: absolute;
-    top: 0;
-    left: 0;
-    outline: none;
-    /* z-index: 999; */
-}
-
-#container{
-    /* display: none; */
-    background-color: #000;
-    /* background-size: cover;
-    background-position: center; */
-    width:100vw;
-    height:100vh;
+    margin:0;
+    padding:0;
+    width:100%;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    transition: all 0.3s ease-in-out;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    user-select: none;
+ 
+}
+
+#introContainer{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    /* flex: 1 0 0; */
+
+    /* height:100%; */
+    /* justify-content: center; */
+    gap: 22vh;
     align-items: center;
-    transition: background-color 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    padding:0;
+    margin:0;
+   
 }
-#lottie{
-    /* display: none; */
-    width:99vw;
-    /* height:50vh;
-    max-height: 400px; */
-    max-width: 900px;
+#lottieLogo{
+  
+    max-width: 1200px;
+    z-index: 20;
+    transition: fill 0.3s ease-in-out;
+}
+
+
+#semi{
+    z-index: 2;
+    transition: fill 0.3s ease-in-out;
+}
+#semicircle, #semicircleFill{
+    transition: all 0.3s ease-in-out;
+}
+#contentContainer{
     display: flex;
-    z-index: 10;
+    flex-direction: column;
+}
+.headline{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1vw 2vw;
+    /* gap: -10; */
+    transition: all 0.3s ease-in-out;
+}
+.headline #with{
+    color: #fff;
+    font-size: 2vw;
+    background-color: #000;
+    padding: .5vw 1vw;
+    border-radius: 8px;
+    z-index: 0;
+    margin: -2vw 0;
+    transition: all 0.3s ease-in-out;
+    
+    
+} 
+#magic{
+    position: relative;
+    /* margin-top:-30vh; */
+    /* margin-bottom: 10vh; */
+    font-size: 6vw;
+    font-weight: 700;    
+    z-index:44;
+
 }
 
+#dlmagic {
+    font-weight: 200;
+    transition: all 0.3s ease-in-out;
+}
+#rgraphics {
+    transition: all 0.3s ease-in-out;
+}
 
+.thinTxt {
+    width:100%;
+    font-weight: 200;
+    
+}
+#overview{
+    /* position:relative; */
+    /* margin-bottom:-20vh; */
+    font-size: 3.5vw;
+    font-weight: 700;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1vw 2vh;
+    /* gap: -10; */
+    transition: all 0.3s ease-in-out;
+    z-index: 55;
+}
+#quote{
+    display: flex;
+    align-items: flex-start;
+    font-weight: 700;
+    
+    z-index: 61;
+    font-size: max(1.5vw, 16px);
+    
+    text-align: left;
+    padding: 2vh 16vw;
+    /* margin-bottom:10vh; */
+    
+}
+#services{
+    overflow-x: hidden;
+    display: flex;
+    z-index: 61;
+    position: relative;
+    font-weight: 700;
+    font-size: 4vw;
+    text-align: center;
+    margin-top: 10vh;
+} 
+
+.offering{
+    display:flex;
+    min-height:200px;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 10vh;
+    /* background-color: deeppink; */
+    padding: 1vh 0vw;
+    min-width: 300px
+}
+.offering img{
+    margin: 0;
+    max-width: 50vw;
+}
+.explainerTxt{
+    max-width: 50vw;
+    transition: color 0.3s ease-in-out;
+}
+.explainerTxt .titlecopy{
+        font-size: max(2vw, 14px);
+        text-align: left;
+        padding: 0 2vw;
+        color: inherit;
+    
+}
+.explainerTxt .bodycopy{
+    font-weight: 200;
+    font-size: max(1vw, 12px);
+    text-align: left;
+    padding: 0 2vw;
+
+}
+#arrow2{
+    transform: scaleX(-1);
+}
+
+#principles{
+    display:flex;
+    align-items: center;
+    justify-content: space-around;
+    font-weight: 700;
+    font-size: 4vw;
+}
+#particles{
+    display: flex;
+    /* position: absolute; */
+    /* top:150vh; */
+    /* height:50vh; */
+    /* width:90vw; */
+    /* background-color: #666; */
+    margin:0;
+    /* margin-top: -10vh; */
+    /* margin-bottom: 5vh; */
+    padding:0;
+    /* border-radius: 5px; */
+    /* max-height: 40vh; */
+    z-index: 44;
+    /* align-self: center; */
+    transition: all 0.3s ease-in-out;
+}
+#model{
+    display: flex;
+    margin:0;
+    padding:0;
+    z-index: 52;
+    transition: all 0.3s ease-in-out;
+    /* background-color: pink; */
+    width:100%;
+}
+
+#lines{
+    display: flex;
+    /* width:100%; */
+    position: absolute;
+    top:0;
+    left:0;
+    right: 0;
+    bottom: 0;
+    justify-content: space-between;
+    opacity: 0.5;
+    z-index: 0;
+    
+}
+.line{
+    transition: fill 0.3s ease-in-out;
+}
+.stroke1{
+    stroke:#222;
+    transition: stroke 0.3s ease-in-out;
+}
+.stroke2{
+    stroke:#222;
+    transition: stroke 0.3s ease-in-out;
+}
+.stroke3{
+    stroke:#222;
+    transition: stroke 0.3s ease-in-out;
+}
 .color1{
     fill:#222;
     transition: fill 0.3s ease-in-out;
@@ -82,7 +268,7 @@ body
     fill:#222;
     transition: fill 0.3s ease-in-out;
     fill-opacity: 0.0;
-    transition-delay: 0.1s;
+    /* transition-delay: 0.1s; */
     transition: fill-opacity 0.13s ease-out;
 }
 .colorReveal{
@@ -91,4 +277,9 @@ body
 .show{
     fill-opacity: 1.0;
     transition: fill-opacity 0.13s ease-out;
+}
+.extra{
+    display: flex;
+    height:100vh;
+    width: 100%;
 }
