--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body{
     max-width: 1200px;
     z-index: 20;
     transition: fill 0.3s ease-in-out;
+    height: 68vh;
 }
 
 
@@ -98,10 +99,10 @@ body{
     /* margin-bottom:-20vh; */
     font-size: 3.5vw;
     font-weight: 700;
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
     align-items: center;
-    padding: 1vw 2vh;
+    /* padding: 1vw 2vh; */
     /* gap: -10; */
     transition: all 0.3s ease-in-out;
     z-index: 55;
@@ -195,13 +196,25 @@ body{
 }
 
 #qrContainer{
-padding: 5vh;
+    padding: 5vh;
     display: flex;
     justify-content: center;
+    align-items: center;
+    font-size: 50vw;
+    
+    
+    overflow: hidden;
 }
 
 #qr{
-    max-width: 40vw;
+    max-width: 1em;
+    display: flex;
+    height: 1em;
+    width: 1em;
+    position: relative;
+    left: -100em;
+    filter: drop-shadow(100em 0 0px #ffffff);
+    /* transition: filter 0.3s ease-in-out; */
 }
 
 #lines{
@@ -313,7 +326,8 @@ padding: 5vh;
         padding:16px;
         min-width: 80vw;
         margin-left: -50vw;
-        background-color: rgba(255, 255, 255, .6)
+        background-color: rgba(255, 255, 255, .6);
+        
 
     }
     
@@ -323,9 +337,11 @@ padding: 5vh;
         flex: 1 0 0;
     }
     #qr{
-        max-width: 90vw;
+        max-width: 80vw;
+
     }
  }
+ 
 /* Small devices (landscape phones, 576px and up) */
 /* @media (min-width: 576px) { } */
 
