--- a/style.css
+++ b/style.css
@@ -54,10 +54,24 @@ body{
     stroke:#222;
     transition: stroke 0.3s ease-in-out;
 }
+#vidblur{
+    clip-path: url(#vmask);
+    position: absolute;
+    top: 0;
+    width:100%;
+    height:100%;
+    object-fit: cover;
+    filter: blur(11px);      
+}
+#vidmask1{
+    position: absolute;
+}
+
 #logorowContainer{
     width:100%;
     height:15vh;
     position: relative;
+    overflow: hidden;
     
 }
 .radicalrow{
@@ -67,7 +81,7 @@ body{
 }
 .logorowShell{
     height: 100%;
-    position: absolute;
+    position:relative;
 }
 .logorow{
     height:100%;
@@ -83,7 +97,7 @@ body{
 #contentContainer{
     display: flex;
     flex-direction: column;
-    /* position: relative; */
+  
 }
 .headline{
     display: flex;
@@ -128,15 +142,11 @@ body{
     
 }
 #overview{
-    /* position:relative; */
-    /* margin-bottom:-20vh; */
     font-size: 3.5vw;
     font-weight: 700;
     /* display: flex; */
     flex-direction: column;
     align-items: center;
-    /* padding: 1vw 2vh; */
-    /* gap: -10; */
     transition: all 0.3s ease-in-out;
     z-index: 55;
 }
@@ -150,7 +160,7 @@ body{
     
     text-align: left;
     padding: 2vh 16vw;
-    /* margin-bottom:10vh; */
+    
     
 }
 #services{
@@ -166,6 +176,7 @@ body{
 
 .offering{
     display:flex;
+    flex-direction: row;
     min-height:200px;
     align-items: center;
     margin-top: 3vh;
@@ -173,24 +184,22 @@ body{
     min-width: 300px;
     position: relative;
 }
-#opposite{
-    flex-direction: row-reverse;
-    position: relative;
-    transform: scaleX(-1);
-    
-}
-#text2{
-    transform: scaleX(-1);
-    
-}
-.offering .arrowAnim{
+.arrowAnim{
     position: absolute;
-    left:0;
-    margin: 0;
     max-width: 50vw;
     min-width: 20vw;
-    
 }
+#opposite{
+    flex-direction: row-reverse;
+}
+#opposite .arrowAnim{
+    transform: scaleX(-1);
+}
+#opposite .txtContainer{
+    left:0;
+}
+
+
 .txtContainer{
     position: absolute;
     right:0;
@@ -198,7 +207,8 @@ body{
     max-width: 60vw;
     transition: all 0.3s ease-in-out;
     background-color: #222;
-    mix-blend-mode: soft-light;
+    mix-blend-mode: hard-light;
+    transform: translate3d(0,0,0);
     padding: 3vh 3vw;
 
 }
@@ -209,10 +219,9 @@ body{
 }
 
 .explainerTxt .titlecopy{
-        font-size: max(2vw, 14px);
-        text-align: left;
-        padding: 0 2vw;
-        color: inherit;
+    font-size: max(2vw, 14px);
+    text-align: left;
+    padding: 0 2vw;
     
 }
 .explainerTxt .bodycopy{
@@ -277,16 +286,17 @@ body{
     
     overflow: hidden;
 }
-
+.qr{
+    fill-rule:evenodd;
+    clip-rule:evenodd;
+    fill:#222;
+    transition: all 0.3s ease-in-out;
+}
 #qr{
-    max-width: 1em;
     display: flex;
     height: 1em;
     width: 1em;
-    position: relative;
-    left: -100em;
-    filter: drop-shadow(100em 0 0px #ffffff);
-    /* transition: filter 0.3s ease-in-out; */
+    /* position: relative; */
 }
 
 
@@ -376,7 +386,7 @@ body{
         
     } 
     .txtContainer{
-        max-width: 90vw;
+        max-width: 80vw;
     
     }
     #qr{
