--- a/style.css
+++ b/style.css
@@ -22,12 +22,30 @@ body{
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    position: fixed;
+    position: relative;
     padding: 4px 0px;
     transition: all 0.3s ease-in-out;
     z-index: 999;
-
+    background-color: white;
+    display: flex;
     /* background-color: red; */
+}
+#nav:hover .dropdown-panel {
+    display: block;
+  }
+.dropdown-panel {
+    display: none;
+    position: absolute;
+    top:34px;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 0;
+    margin: 0;
+    z-index: 999;
+  }
+#colornav{
+    background-color: hotpink;
 }
 #nav > img{
     margin-right: 8px;
@@ -184,20 +202,22 @@ body{
     text-align: center;
     margin-top: 10vh;
 } 
-
+#offeringsContainer{
+    display: flex;
+    flex-direction: column;
+}
 .offering{
     display:flex;
-    flex-direction: row;
-    min-height:200px;
+    /* min-height:200px; */
     align-items: center;
-    margin-top: 3vh;
+   
     padding: 9vh 0vw;
-    min-width: 300px;
+    /* min-width: 300px; */
     position: relative;
     color: white;
 }
 .arrowAnim{
-    position: absolute;
+    position: relative;
     max-width: 50vw;
     min-width: 20vw;
 }
@@ -246,6 +266,7 @@ body{
 
 
 #principles{
+    position: relative;
     display:flex;
     align-items: center;
     justify-content: space-around;
@@ -394,12 +415,24 @@ body{
     #quote{
         padding: 2vh 4vw;
     }
+    .offering{
+        margin: 5vh 0;
+    }
     #services{
         font-size: 8vw;
     } 
+    #principles{
+        font-size: 4vw;
+    }
     .txtContainer{
         max-width: 90vw;
     
+    }
+    .arrowAnim{
+        position: relative;
+        max-width: 100vw;
+        min-width: 20vw;
+        max-height: min-content;
     }
     #qr{
         width: 100vw;
