--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
     display: flex;
     flex-direction: column;
     transition: all 0.3s ease-in-out;
-    user-select: none;
+    
     
 }
 #nav{
@@ -22,30 +22,77 @@ body{
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    position: relative;
+    position: fixed;
     padding: 4px 0px;
     transition: all 0.3s ease-in-out;
     z-index: 999;
     background-color: white;
     display: flex;
-    /* background-color: red; */
+    box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.18);
 }
-#nav:hover .dropdown-panel {
-    display: block;
-  }
-.dropdown-panel {
-    display: none;
+.hideNav {
+    visibility: hidden;
+    opacity: 0;
+}
+.showNav {
+    visibility: visible;
+    opacity: 1;
+}
+#navPanel {
+    
+    transition:visibility 0.3s linear,opacity 0.3s linear;
     position: absolute;
     top:34px;
-    background-color: #f9f9f9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.12);
     padding: 0;
     margin: 0;
     z-index: 999;
   }
-#colornav{
-    background-color: hotpink;
+  #navModal{
+    width:200vw;
+    height: 800vh;
+    position: absolute;
+    top:0;
+    left: 0;
+    z-index: 90;
+    /* background-color: rgba(255,44,255,0.8); */
+}
+#colorNav{
+    background: rgba(255,255,255,0.8);
+    display: flex;
+    flex-direction: row;
+    max-width: 100vw;
+    padding:4px;
+    justify-content: space-around;
+    align-content: flex-start;
+    align-items: flex-start;
+    align-items: stretch;
+}
+.palette{
+    /* background-color: #eFeFeF; */
+    margin: .1vw;
+    display:flex;
+    flex-direction: column;
+    transition: all 0.3s ease-in-out;
+    
+}
+.palette:hover{
+    background-color: #efefef;
+    
+}
+.paletteItem{
+    pointer-events: none;
+    border-radius: 2px;
+    margin: 1px;
+    /* width: max(1vw, 10px);
+    height: max(1vh, 10px); */
+    width: 22px;
+    height: 22px;
+    /* width: min(1vw, 10px);
+    height: min(1vh, 10px); */
+    
+    
 }
 #nav > img{
     margin-right: 8px;
@@ -60,6 +107,7 @@ body{
     transition: all 0.3s ease-in-out;
     padding:0;
     margin:0;
+    /* user-select: none; */
    
 }
 #lottieLogo{
@@ -123,6 +171,7 @@ body{
   
 }
 .headline{
+    background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -396,6 +445,25 @@ body{
 @media (max-width: 768px) { 
     #introContainer{
         gap: 8vh;
+    }
+    #navPanel{
+        width: 100vw;
+    }
+   
+    .palette{
+        background-color: #eFeFeF;
+        margin: .1vw;
+        display:flex;
+        flex-direction: column;
+        
+    }
+    .paletteItem{
+        /* width: 10px;
+        height: 10px; */
+        width: max(1vw, 10px);
+        height: max(1vh, 10px);
+        
+        
     }
     #magic{
         font-size: 10vw;
