--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
     display: flex;
     flex-direction: column;
     transition: all 0.3s ease-in-out;
-    
+    user-select: none;
     
 }
 #nav{
@@ -29,6 +29,16 @@ body{
     background-color: white;
     display: flex;
     box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.18);
+}
+footer{
+    width: inherit;
+    height: 4vh;
+    min-height: 32px;
+    display: flex;
+    padding: 4px 0px;
+    transition: all 0.3s ease-in-out;
+    background-color: white;
+    /* box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.18); */
 }
 .hideNav {
     visibility: hidden;
@@ -51,8 +61,8 @@ body{
     
   }
   #navModal{
-    width:200vw;
-    height: 800vh;
+    width:100vw;
+    height: 100%;
     position: absolute;
     top:0;
     left: 0;
@@ -138,33 +148,6 @@ body{
     stroke:#222;
     transition: stroke 0.3s ease-in-out;
 }
-/* .vidblur{
-    mask-image: url(./assets/logorow.svg);
-    mask-size:contain;
-    mask-repeat: repeat-x;
-    position: absolute;
-    left: -10px;
-    width:200%;
-    height:auto;
-    z-index: 0;
-    filter: blur(11px);      
-} */
-/* 
-#logorowContainer{
-    display: flex;
-    flex-direction: column;
-    max-height: 10vh;
-    
-}
-.logo-row{
-    display: flex;
-    overflow-x: auto;
-    white-space: nowrap; 
-}
-.logo{
-    flex: 0 0 auto;
-    max-height: 30px;
-} */
 
 #contentContainer{
     display: flex;
@@ -363,11 +346,18 @@ body{
     padding: 5vh;
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     font-size: 50vw;
     
     
     overflow: hidden;
+}
+#desktopInstructions{
+    font-size: .025em;
+}
+#mobileInstructions{
+    font-size: .025em;
 }
 .qr{
     fill-rule:evenodd;
@@ -379,7 +369,7 @@ body{
     display: flex;
     height: 1em;
     width: 1em;
-    max-height: 90vh;
+    max-height: 60vh;
     /* position: relative; */
 }
 
@@ -509,6 +499,9 @@ body{
        
         /* max-width: 80vw; */
 
+    }
+    #mobileInstructions{
+        font-size: 0.075em;
     }
  }
  
