--- a/style.css
+++ b/style.css
@@ -16,14 +16,18 @@ body{
     
 }
 #nav{
-    width: inherit;
+    width: auto;
     height: 4vh;
     min-height: 32px;
     display: flex;
+    flex-direction: row-reverse;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-between;
     position: fixed;
-    padding: 4px 0px;
+    top:0;
+    left:0;
+    right:0;
+    padding: 4px 16px;
     transition: all 0.3s ease-in-out;
     z-index: 999;
     background-color: white;
@@ -31,13 +35,17 @@ body{
     box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.18);
 }
 footer{
-    width: inherit;
+    width: auto;
     height: 4vh;
     min-height: 32px;
     display: flex;
-    padding: 4px 0px;
+    align-items: center;
+    justify-content: space-between;
+    padding: 4px 16px;
+    
     transition: all 0.3s ease-in-out;
     background-color: white;
+    
     /* box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.18); */
 }
 .hideNav {
@@ -47,6 +55,16 @@ footer{
 .showNav {
     visibility: visible;
     opacity: 1;
+}
+.logo{
+    display: none;
+    visibility: hidden;
+}
+#navLogo, #footerLogo{
+    width:60px;
+    font-size:10px;
+    display: block;
+    visibility:visible;
 }
 #navPanel {
     
@@ -63,7 +81,7 @@ footer{
   #navModal{
     width:100vw;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top:0;
     left: 0;
     z-index: 90;
@@ -191,6 +209,7 @@ footer{
     transition: all 0.3s ease-in-out;
 }
 #rgraphics {
+    white-space: nowrap;
     transition: all 0.3s ease-in-out;
 }
 
@@ -306,6 +325,9 @@ footer{
     font-weight: 700;
     font-size: 4vw;
 }
+.bodyText{
+    text-align: center;
+} 
 #canvases{
     position: relative;
     height: 50vh;
@@ -494,13 +516,13 @@ footer{
         max-height: min-content;
     }
     #qr{
-        width: 100vw;
+        width: 60vw;
         font-size: 100vw;
        
         /* max-width: 80vw; */
 
     }
-    #mobileInstructions{
+    #qrContainer > .bodyText{
         font-size: 0.075em;
     }
  }
