--- a/style.css
+++ b/style.css
@@ -43,6 +43,16 @@ body{
 
     /* box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.18); */
 }
+#footer-rt{
+    display: flex;
+    gap: 16px;
+}
+#email{
+    width:1.5vw;
+    height: auto;
+    padding-top: 4px;
+} 
+
 .hideNav {
     visibility: hidden;
     opacity: 0;
@@ -55,7 +65,7 @@ body{
     display: none;
     visibility: hidden;
 }
-#navLogo, #footerLogo{
+#navLogo, #footerLogo, #aboutLogo{
     width:60px;
     font-size:10px;
     display: block;
@@ -71,35 +81,40 @@ body{
     box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.12);
     padding: 0;
     margin: 0;
+    background: rgba(255,255,255,0.8);
     z-index: 44;
-    
   }
 #footerPanel {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     transition:visibility 0.3s linear,opacity 0.3s linear;
     position: absolute;
     bottom:34px;
-    max-width: 30vw;
+    max-width: 50vw;
     box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.12);
-    padding: 16px;
+    
     margin: 0;
-    z-index: 44;
+    z-index: 84;
     background-color: #efefef;
     flex-direction: column;
+    max-height:80vh;
+    overflow-y: auto;
+    padding-bottom: 16px;
     
   }
 #footerPanel .titlecopy{
     font-size: 2vw;
     font-weight: 700;
+    margin: 16px 0;
 }
 #footerPanel .title{
     font-family: field-gothic-compact, sans-serif;
     font-size: 1.5vw;
     font-weight: 700;
+    margin: 0;
 }
-  #navModal{
+#navModal{
     width:100vw;
     height: 100%;
     position: fixed;
@@ -109,14 +124,12 @@ body{
     /* background-color: rgba(255,44,255,0.8); */
 }
 #colorNav{
-    background: rgba(255,255,255,0.8);
     display: flex;
     flex-direction: row;
     max-width: 100vw;
     padding:4px;
     justify-content: space-around;
-    align-content: flex-start;
-   
+    align-content: flex-start; 
     align-items: stretch;
 }
 #colorNavBtn{
@@ -127,6 +140,18 @@ body{
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
+}
+#randomBtn{
+    margin-bottom: 8px;
+    margin-left: 8px;
+    border: none;
+    font-family: field-gothic-wide, sans-serif;
+    /* font-weight: 400; */
+    letter-spacing: 0.5px;
+    padding: 8px;
+    border-radius: 4px;
+    font-size: 0.75em;
+    transition: all 0.3s ease-in-out;
 }
 .colorNavBtnSwatch{
     aspect-ratio: 1 / 1; 
@@ -155,18 +180,9 @@ body{
     pointer-events: none;
     border-radius: 2px;
     margin: 1px;
-    /* width: max(1vw, 10px);
-    height: max(1vh, 10px); */
     width: 22px;
-    height: 22px;
-    /* width: min(1vw, 10px);
-    height: min(1vh, 10px); */
-    
-    
+    height: 22px;   
 }
-/* #nav > img{
-    margin-right: 8px;
-} */
 
 #introContainer{
     position: relative;
@@ -360,6 +376,10 @@ body{
     display: flex;
     flex-direction: row;
     align-items: stretch;
+}
+.list{
+    padding:0;
+    margin: 8px;
 }
 
 #principles{
@@ -581,12 +601,19 @@ body{
     }
     #footerPanel .titlecopy{
         font-size: 8vw;
-        font-weight: 700;
+        
     }
     #footerPanel .title{
         font-family: field-gothic-compact, sans-serif;
         font-size: 6vw;
         font-weight: 700;
+    }
+    #email{
+        width: 5vw;
+    }
+    
+    #footer-rt{
+        gap: 8px;
     }
  }
  
